--- a/src/app/Components/sign-up/sign-up.css
+++ b/src/app/Components/sign-up/sign-up.css
@@ -303,9 +303,9 @@ input:focus {
 }
 
 .login-logo img {
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
+  width: 48px;
+  height: 48px;
+  object-fit: contain;
 }
 
 .logo {
